--- a/package.json
+++ b/package.json
@@ -56,8 +56,10 @@
     "watch:labextension": "jupyter labextension watch ."
   },
   "dependencies": {
-    "@jupyterlab/application": "^3.1.0",
-    "@jupyterlab/settingregistry": "^3.1.0"
+    "@jupyterlab/application": "^3.6.3",
+    "@jupyterlab/apputils": "^3.6.3",
+    "@jupyterlab/settingregistry": "^3.1.0",
+    "@lumino/widgets": "^1.37.2"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
@@ -79,8 +81,8 @@
     "stylelint-config-recommended": "^6.0.0",
     "stylelint-config-standard": "~24.0.0",
     "stylelint-prettier": "^2.0.0",
-    "typescript": "~4.1.3",
-    "ts-jest": "^26.0.0"
+    "ts-jest": "^26.0.0",
+    "typescript": "~4.1.3"
   },
   "sideEffects": [
     "style/*.css",
