--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   "dependencies": {
     "@jupyterlab/application": "^3.6.3",
     "@jupyterlab/apputils": "^3.6.3",
+    "@jupyterlab/launcher": "^3.6.3",
     "@jupyterlab/settingregistry": "^3.1.0",
     "@lumino/widgets": "^1.37.2"
   },
